--- a/Auth Server/winAOpt.xaml
+++ b/Auth Server/winAOpt.xaml
@@ -1,14 +1,32 @@
 ﻿<Window x:Class="Digital_World.Options"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="179" Width="300">
+        Title="Options" Height="330" Width="400">
     <Grid>
         <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="btnCancel" VerticalAlignment="Bottom" Width="75" IsCancel="True" Click="btnCancel_Click" />
         <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="btnOK" VerticalAlignment="Bottom" Width="75" IsDefault="True" Click="btnOK_Click" />
-        <Label Content="Host" Height="28" HorizontalAlignment="Left" Margin="12,12,0,0" VerticalAlignment="Top" />
-        <TextBox Height="23" Margin="53,14,12,0" Name="tHost" VerticalAlignment="Top" Text="127.0.0.1" />
-        <TextBox Height="23" Margin="53,48,12,0" Name="tPort" VerticalAlignment="Top" Text="6999" />
-        <Label Content="Port" Height="28" HorizontalAlignment="Left" Margin="12,46,0,0" VerticalAlignment="Top" />
-        <CheckBox Content="Start Automatically" Height="16" HorizontalAlignment="Left" Margin="12,80,0,0" Name="chkStart" VerticalAlignment="Top" Width="254" />
+        
+        <GroupBox Header="Server Settings" Height="110" HorizontalAlignment="Stretch" Margin="12,12,12,0" VerticalAlignment="Top">
+            <Grid>
+                <Label Content="Host" Height="28" HorizontalAlignment="Left" Margin="6,6,0,0" VerticalAlignment="Top" />
+                <TextBox Height="23" Margin="53,8,12,0" Name="tHost" VerticalAlignment="Top" Text="127.0.0.1" />
+                <Label Content="Port" Height="28" HorizontalAlignment="Left" Margin="6,34,0,0" VerticalAlignment="Top" />
+                <TextBox Height="23" Margin="53,36,12,0" Name="tPort" VerticalAlignment="Top" Text="6999" />
+                <CheckBox Content="Start Automatically" Height="16" HorizontalAlignment="Left" Margin="6,68,0,0" Name="chkStart" VerticalAlignment="Top" Width="254" />
+            </Grid>
+        </GroupBox>
+        
+        <GroupBox Header="Database Settings" Height="140" HorizontalAlignment="Stretch" Margin="12,128,12,0" VerticalAlignment="Top">
+            <Grid>
+                <Label Content="Host" Height="28" HorizontalAlignment="Left" Margin="6,6,0,0" VerticalAlignment="Top" />
+                <TextBox Height="23" Margin="80,8,12,0" Name="tDBHost" VerticalAlignment="Top" />
+                <Label Content="Username" Height="28" HorizontalAlignment="Left" Margin="6,34,0,0" VerticalAlignment="Top" />
+                <TextBox Height="23" Margin="80,36,12,0" Name="tDBUser" VerticalAlignment="Top" />
+                <Label Content="Password" Height="28" HorizontalAlignment="Left" Margin="6,62,0,0" VerticalAlignment="Top" />
+                <PasswordBox Height="23" Margin="80,64,12,0" Name="tDBPass" VerticalAlignment="Top" />
+                <Label Content="Schema" Height="28" HorizontalAlignment="Left" Margin="6,90,0,0" VerticalAlignment="Top" />
+                <TextBox Height="23" Margin="80,92,12,0" Name="tDBSchema" VerticalAlignment="Top" />
+            </Grid>
+        </GroupBox>
     </Grid>
 </Window>
