--- a/Auth Server/winAOpt.xaml
+++ b/Auth Server/winAOpt.xaml
@@ -1,32 +1,93 @@
 ﻿<Window x:Class="Digital_World.Options"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="330" Width="400">
-    <Grid>
+        Title="Options" Height="560" Width="420" ResizeMode="NoResize">
+    <Grid Margin="10">
         <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="btnCancel" VerticalAlignment="Bottom" Width="75" IsCancel="True" Click="btnCancel_Click" />
         <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="btnOK" VerticalAlignment="Bottom" Width="75" IsDefault="True" Click="btnOK_Click" />
         
-        <GroupBox Header="Server Settings" Height="110" HorizontalAlignment="Stretch" Margin="12,12,12,0" VerticalAlignment="Top">
-            <Grid>
-                <Label Content="Host" Height="28" HorizontalAlignment="Left" Margin="6,6,0,0" VerticalAlignment="Top" />
-                <TextBox Height="23" Margin="53,8,12,0" Name="tHost" VerticalAlignment="Top" Text="127.0.0.1" />
-                <Label Content="Port" Height="28" HorizontalAlignment="Left" Margin="6,34,0,0" VerticalAlignment="Top" />
-                <TextBox Height="23" Margin="53,36,12,0" Name="tPort" VerticalAlignment="Top" Text="6999" />
-                <CheckBox Content="Start Automatically" Height="16" HorizontalAlignment="Left" Margin="6,68,0,0" Name="chkStart" VerticalAlignment="Top" Width="254" />
-            </Grid>
-        </GroupBox>
-        
-        <GroupBox Header="Database Settings" Height="140" HorizontalAlignment="Stretch" Margin="12,128,12,0" VerticalAlignment="Top">
-            <Grid>
-                <Label Content="Host" Height="28" HorizontalAlignment="Left" Margin="6,6,0,0" VerticalAlignment="Top" />
-                <TextBox Height="23" Margin="80,8,12,0" Name="tDBHost" VerticalAlignment="Top" />
-                <Label Content="Username" Height="28" HorizontalAlignment="Left" Margin="6,34,0,0" VerticalAlignment="Top" />
-                <TextBox Height="23" Margin="80,36,12,0" Name="tDBUser" VerticalAlignment="Top" />
-                <Label Content="Password" Height="28" HorizontalAlignment="Left" Margin="6,62,0,0" VerticalAlignment="Top" />
-                <PasswordBox Height="23" Margin="80,64,12,0" Name="tDBPass" VerticalAlignment="Top" />
-                <Label Content="Schema" Height="28" HorizontalAlignment="Left" Margin="6,90,0,0" VerticalAlignment="Top" />
-                <TextBox Height="23" Margin="80,92,12,0" Name="tDBSchema" VerticalAlignment="Top" />
-            </Grid>
-        </GroupBox>
+        <StackPanel Orientation="Vertical" Margin="0,0,0,45">
+            <GroupBox Header="Server Settings" Margin="0,0,0,10" Padding="10">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <Label Grid.Row="0" Grid.Column="0" Content="Host" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="0" Grid.Column="1" Name="tHost" Text="127.0.0.1" Margin="5,2" />
+                    
+                    <Label Grid.Row="1" Grid.Column="0" Content="Port" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="1" Grid.Column="1" Name="tPort" Text="6999" Margin="5,2" />
+                    
+                    <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Content="Start Automatically" Name="chkStart" Margin="5,5,0,0" />
+                </Grid>
+            </GroupBox>
+            
+            <GroupBox Header="Database Settings" Margin="0,0,0,10" Padding="10">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <Label Grid.Row="0" Grid.Column="0" Content="Host" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="0" Grid.Column="1" Name="tDBHost" Margin="5,2" />
+                    
+                    <Label Grid.Row="1" Grid.Column="0" Content="Username" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="1" Grid.Column="1" Name="tDBUser" Margin="5,2" />
+                    
+                    <Label Grid.Row="2" Grid.Column="0" Content="Password" VerticalAlignment="Center" />
+                    <PasswordBox Grid.Row="2" Grid.Column="1" Name="tDBPass" Margin="5,2" />
+                    
+                    <Label Grid.Row="3" Grid.Column="0" Content="Schema" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="3" Grid.Column="1" Name="tDBSchema" Margin="5,2" />
+                </Grid>
+            </GroupBox>
+            
+            <GroupBox Header="HTTP Server Settings" Padding="10">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <CheckBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Enable HTTP Server" Name="chkHttpEnabled" Margin="5,2" />
+                    
+                    <Label Grid.Row="1" Grid.Column="0" Content="HTTP Port" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="1" Grid.Column="1" Name="tHttpPort" Text="8080" Margin="5,2" />
+                    
+                    <CheckBox Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Content="Enable HTTPS" Name="chkHttpsEnabled" Margin="5,2" />
+                    
+                    <Label Grid.Row="3" Grid.Column="0" Content="HTTPS Port" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="3" Grid.Column="1" Name="tHttpsPort" Text="8443" Margin="5,2" />
+                    
+                    <Label Grid.Row="4" Grid.Column="0" Content="Patch Path" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="4" Grid.Column="1" Name="tPatchPath" Text="C:\DMOServer\HttpServer\www" Margin="5,2" />
+                    
+                    <Label Grid.Row="5" Grid.Column="0" Content="Cert Path" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="5" Grid.Column="1" Name="tCertPath" Margin="5,2" />
+                </Grid>
+            </GroupBox>
+        </StackPanel>
     </Grid>
 </Window>
