Add FTP Server (Upload-Only) with HashResulLogs storage
- Created FtpServer.cs: Upload-only FTP server implementation
- Blocked commands: LIST, NLST, RETR, DELE, RMD, MKD, CWD, RNFR, RNTO
- Allowed operations: USER, PASS, PORT, PASV, STOR (upload only)
- Default credentials: username=upload, password=upload123
- Storage path: C:\DMOServer\HashResulLogs
- Added FTP settings to AuthServerSettings (port, path, credentials)
- Integrated FTP server lifecycle with Auth Server (start/stop)
- UI configuration in winAOpt.xaml with ScrollViewer for all settings
- FTP settings group: Enable/Port/Path/Username/Password
- Auto-start FTP server if enabled in settings
- Recreate FTP server instance on settings changes

--- a/Auth Server/winAOpt.xaml
+++ b/Auth Server/winAOpt.xaml
@@ -1,12 +1,13 @@
 ﻿<Window x:Class="Digital_World.Options"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Options" Height="560" Width="420" ResizeMode="NoResize">
+        Title="Options" Height="680" Width="420" ResizeMode="NoResize">
     <Grid Margin="10">
         <Button Content="Cancel" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="btnCancel" VerticalAlignment="Bottom" Width="75" IsCancel="True" Click="btnCancel_Click" />
         <Button Content="OK" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="btnOK" VerticalAlignment="Bottom" Width="75" IsDefault="True" Click="btnOK_Click" />
         
-        <StackPanel Orientation="Vertical" Margin="0,0,0,45">
+        <ScrollViewer Margin="0,0,0,45" VerticalScrollBarVisibility="Auto">
+            <StackPanel Orientation="Vertical">
             <GroupBox Header="Server Settings" Margin="0,0,0,10" Padding="10">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -91,6 +92,37 @@
                     </ComboBox>
                 </Grid>
             </GroupBox>
+            
+            <GroupBox Header="FTP Server Settings (Upload Only)" Padding="10">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    
+                    <CheckBox Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Enable FTP Server" Name="chkFtpEnabled" Margin="5,2" />
+                    
+                    <Label Grid.Row="1" Grid.Column="0" Content="FTP Port" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="1" Grid.Column="1" Name="tFtpPort" Text="21" Margin="5,2" />
+                    
+                    <Label Grid.Row="2" Grid.Column="0" Content="Upload Path" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="2" Grid.Column="1" Name="tFtpUploadPath" Text="C:\DMOServer\HashResulLogs" Margin="5,2" />
+                    
+                    <Label Grid.Row="3" Grid.Column="0" Content="Username" VerticalAlignment="Center" />
+                    <TextBox Grid.Row="3" Grid.Column="1" Name="tFtpUsername" Text="upload" Margin="5,2" />
+                    
+                    <Label Grid.Row="4" Grid.Column="0" Content="Password" VerticalAlignment="Center" />
+                    <PasswordBox Grid.Row="4" Grid.Column="1" Name="tFtpPassword" Margin="5,2" />
+                </Grid>
+            </GroupBox>
         </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
