--- a/Auth Server/DigitalWorldAuth.xaml
+++ b/Auth Server/DigitalWorldAuth.xaml
@@ -1,13 +1,58 @@
 ﻿<Window x:Class="Digital_World.AuthMainWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Digital World Auth Server" Height="334" Width="821">
+        Title="Digital World Auth Server" Height="700" Width="1200">
     <Grid>
-        <Button Content="Start" Height="23" HorizontalAlignment="Right" Margin="0,0,93,12" Name="btnListen" VerticalAlignment="Bottom" Width="75" Click="btnStart_Click" />
-        <Button Content="Stop" Height="23" HorizontalAlignment="Right" Margin="0,0,12,12" Name="btnStop" VerticalAlignment="Bottom" Width="75" Click="btnStop_Click" />
-        <TextBox Margin="12,29,12,42" Name="tLog" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Visible" FontFamily="Lucida Console" IsReadOnly="True" />
-        <Menu Height="23" Margin="0,0,0,0" VerticalAlignment="Top">
-            <MenuItem Header="Options" Name="mi_opt" Click="mi_opt_Click" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="23"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        
+        <!-- Menu -->
+        <Menu Grid.Row="0" Height="23">
+            <MenuItem Header="Opções" Name="mi_opt" Click="mi_opt_Click" />
         </Menu>
+        
+        <!-- Área de Logs -->
+        <Grid Grid.Row="1" Margin="12,6,12,6">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <!-- Log do Servidor de Autenticação -->
+            <GroupBox Grid.Column="0" Header="Log - Servidor de Autenticação" Padding="5">
+                <TextBox Name="tLogAuth" 
+                         HorizontalScrollBarVisibility="Auto" 
+                         VerticalScrollBarVisibility="Visible" 
+                         FontFamily="Lucida Console" 
+                         FontSize="10"
+                         IsReadOnly="True" 
+                         Background="#1E1E1E"
+                         Foreground="#D4D4D4"/>
+            </GroupBox>
+            
+            <GridSplitter Grid.Column="1" Width="5" HorizontalAlignment="Stretch" Background="#3F3F46"/>
+            
+            <!-- Log HTTP/HTTPS e FTP -->
+            <GroupBox Grid.Column="2" Header="Log - HTTP/HTTPS e FTP" Padding="5">
+                <TextBox Name="tLogWeb" 
+                         HorizontalScrollBarVisibility="Auto" 
+                         VerticalScrollBarVisibility="Visible" 
+                         FontFamily="Lucida Console" 
+                         FontSize="10"
+                         IsReadOnly="True" 
+                         Background="#1E1E1E"
+                         Foreground="#D4D4D4"/>
+            </GroupBox>
+        </Grid>
+        
+        <!-- Botões -->
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,0,12,12">
+            <Button Content="Iniciar" Height="28" Width="90" Margin="0,0,10,0" Name="btnListen" Click="btnStart_Click" />
+            <Button Content="Parar" Height="28" Width="90" Name="btnStop" Click="btnStop_Click" />
+        </StackPanel>
     </Grid>
 </Window>
